--- a/MT/MT.UnitTest/MT.UnitTest.csproj
+++ b/MT/MT.UnitTest/MT.UnitTest.csproj
@@ -5,6 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="bin\Debug\netcoreapp1.1\testModel.json" />
+    <Content Include="bin\Debug\netcoreapp1.1\testModel.xml" />
+    <Content Include="bin\Debug\netcoreapp1.1\test.json" />
+    <Content Include="bin\Debug\netcoreapp1.1\test.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bin\Debug\netcoreapp1.1\testModel.ini" />
+    <None Include="bin\Debug\netcoreapp1.1\test.ini" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
@@ -19,5 +31,7 @@
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
