--- a/MT/MT.UnitTest/MT.UnitTest.csproj
+++ b/MT/MT.UnitTest/MT.UnitTest.csproj
@@ -32,6 +32,6 @@
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties bin_4Debug_4netcoreapp1_11_4test_1json__JSONSchema="http://json.schemastore.org/config" /></VisualStudio></ProjectExtensions>
 
 </Project>
