ref  out 依然无法拦截处理  尽量用对象一个类对象代替ref 和out 的用法

--- a/MT/MT.UnitTest/MT.UnitTest.csproj
+++ b/MT/MT.UnitTest/MT.UnitTest.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MT.AOP\MT.AOP.csproj" />
     <ProjectReference Include="..\MT.Common\MT.Common.csproj" />
   </ItemGroup>
 
