--- a/MT/MT.Redis/MT.Redis.csproj
+++ b/MT/MT.Redis/MT.Redis.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="StackExchange.Redis" Version="1.2.4" />
   </ItemGroup>
