--- a/MT/MT.UnitTest/Config/log4net.config
+++ b/MT/MT.UnitTest/Config/log4net.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <!-- This section contains the log4net configuration settings -->
   <log4net>
@@ -143,6 +143,7 @@
     </logger>
 
     <appender name="Console" type="log4net.Appender.ConsoleAppender">
+ 
       <layout type="log4net.Layout.PatternLayout" value="记录时间:%date▆线程ID:[%thread]▆日志级别:%-5level▆LoggerName:%logger▆输出信息:%message%newline" />
     </appender>
 
