--- a/MT/MT.UnitTest/MT.UnitTest.csproj
+++ b/MT/MT.UnitTest/MT.UnitTest.csproj
@@ -40,6 +40,6 @@
     <None Include="bin\Debug\netcoreapp1.1\testModel.ini" />
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties bin_4Debug_4netcoreapp1_11_4test_1json__JSONSchema="http://json.schemastore.org/config" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties bin_4Debug_4netcoreapp1_11_4redis_1json__JSONSchema="http://json.schemastore.org/geojson" bin_4Debug_4netcoreapp1_11_4test_1json__JSONSchema="http://json.schemastore.org/config" /></VisualStudio></ProjectExtensions>
 
 </Project>
